<resources>
    <string name="app_name">搜箱</string>
    <string name="anim_time">500</string>
    <string name="anim_short">300</string>
    <string name="login_title">登录</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_want_logon">新用户注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="register_title">注册</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_code_get">获取验证码</string>
    <string name="register_code_tip">(请在60秒内完成验证, 超时请点击重新发送)</string>
    <string name="register_pwd1_hint">请输入密码 (6–12个字符)</string>
    <string name="register_pwd2_hint">请再次输入密码 (6–12个字符)</string>
    <string name="register_i_agree">我同意</string>
    <string name="register_agreement">《注册协议》</string>
    <string name="register_next">下一步</string>
    <string name="agreement_title">注册协议</string>
    <string name="identification_title">身份认证</string>
    <string name="identification_usertype">用户类型:</string>
    <string name="identification_usertype1">买家(只能买箱)</string>
    <string name="identification_usertype2">卖家(含买卖功能)</string>
    <string name="identification_identitytype">身份类型:</string>
    <string name="identification_identitytype1">个人商户</string>
    <string name="identification_identitytype2">企业商户</string>
    <string name="identification_country">所在国家</string>
    <string name="identification_country_choose">请选择所在国家</string>
    <string name="identification_city">所在城市</string>
    <string name="identification_city_choose">请选择所在城市</string>
    <string name="identification_user_id">用户ID</string>
    <string name="identification_user_name">姓名</string>
    <string name="identification_user_name_hint">请输入姓名</string>
    <string name="identification_user_phone">联系方式</string>
    <string name="identification_user_phone_hint">请输入手机号码</string>
    <string name="identification_user_address">联系地址</string>
    <string name="identification_user_address_hint">请输入联系地址</string>
    <string name="identification_bank_id">银行账号</string>
    <string name="identification_bank_id_hint">请仔细输入银行账号</string>
    <string name="identification_bank">开户银行</string>
    <string name="identification_bank_hint">请输入开户银行</string>
    <string name="identification_bank_name">银行账户名</string>
    <string name="identification_bank_name_hint">请输入账户名</string>
    <string name="identification_weixin">微信号</string>
    <string name="identification_weixin_hint">请输入微信号</string>
    <string name="identification_qq">QQ</string>
    <string name="identification_qq_hint">请输入QQ</string>
    <string name="identification_company_name">公司名称</string>
    <string name="identification_company_name_hint">请输入营业执照上公司名称</string>
    <string name="identification_company_phone">公司电话</string>
    <string name="identification_company_phone_hint">请输入公司(区号)固定电话</string>
    <string name="identification_company_address">公司地址</string>
    <string name="identification_company_address_hint">请输入营业执照上公司地址</string>
    <string name="identification_company_person">公司负责人</string>
    <string name="identification_company_person_hint">请输入公司负责人姓名</string>
    <string name="identification_company_legalperson">公司法人名</string>
    <string name="identification_company_legalperson_hint">请输入法人姓名</string>
    <string name="identification_maincity">主营城市</string>
    <string name="identification_add">添加</string>
    <string name="identification_delete">删除</string>
    <string name="identification_tip1">注: 请选择您的主营城市, 选择完城市, 将收到对应城市的求购信息. 注册完成后, 可在个人中心中进行修改.</string>
    <string name="identification_tip2">注: 您的证件信息不会被公开</string>
    <string name="identification_register">实名注册</string>
    <string name="forgetpwd_title">忘记密码</string>
    <string name="forgetpwd_sure">确定</string>
    <string name="city_title">城市选择</string>
    <string name="main_title">集装箱</string>
    <string name="main_tab1">首页</string>
    <string name="main_tab2">交易市场</string>
    <string name="main_tab3">讨论区</string>
    <string name="main_tab4">我的</string>
    <string name="main_left_text">我的买箱订单</string>
    <string name="main_buy">我要买箱</string>
    <string name="main_sale">我要卖箱</string>
    <string name="main_buy_info">最新买箱信息</string>
    <string name="main_sale_info">最新卖箱信息</string>
    <string name="main_type">箱型:</string>
    <string name="main_deel_money">报价金额:</string>
    <string name="main_deel_num">数量:</string>
    <string name="main_people">人围观</string>
    <string name="market_search_hint">输入您要搜索的内容</string>
    <string name="market_search_button">搜索</string>
    <string name="market_tab_buy">买箱信息</string>
    <string name="market_tab_sale">卖箱信息</string>
    <string name="market_condition1">城市</string>
    <string name="market_condition2">箱型</string>
    <string name="market_condition3">价格</string>
    <string name="market_condition4">箱况</string>
    <string name="market_tips_buy">注:如有疑问,请关注微信公众号:搜箱findcontainer</string>
    <string name="market_tips_saler">注:购买方可以对商品进行投标，只能出五次价格</string>
    <string name="market_floating_tip1">发布集装箱</string>
    <string name="market_floating_tip2">求购信息</string>
    <string name="market_floating_tip3">出售信息</string>
    <string name="sendbuyinfo_title">发布买箱信息</string>
    <string name="sendbuyinfo_country">所在国家</string>
    <string name="sendbuyinfo_country_hint">请选择国家</string>
    <string name="sendbuyinfo_city">集装箱所在城市</string>
    <string name="sendbuyinfo_city_hint">请选择城市</string>
    <string name="sendbuyinfo_type">箱型</string>
    <string name="sendbuyinfo_type_hint">请选择箱型</string>
    <string name="sendbuyinfo_status">箱况</string>
    <string name="sendbuyinfo_status_hint">请选择箱况</string>
    <string name="sendbuyinfo_num">数量</string>
    <string name="sendbuyinfo_num_tip">最多99个</string>
    <string name="sendbuyinfo_tip">交易类型选择为"出售"的话,需要填写报价金额但不用选择有效时间.\n交易类型选择为"投标"的话,不需要填写报价金额但需要选择投标有效时间.</string>
    <string name="sendbuyinfo_time">投标时间</string>
    <string name="sendbuyinfo_time_hint">请选择时间</string>
    <string name="sendbuyinfo_requre_hint">为了卖家更好的了解信息，请备注好箱子的特殊要求（如改铭牌费、订箱号）及其他卖点（如箱子颜色、箱子的成新等）</string>
    <string name="sendsaleinfo_title">发布卖箱信息</string>
    <string name="sendsaleinfo_money">报价金额</string>
    <string name="sendsaleinfo_money_hint">元</string>
    <string name="sendsaleinfo_money_hint_">元(总价)</string>
    <string name="sendsaleinfo_time">有效时间</string>
    <string name="sendsaleinfo_time_hint">请选择时间</string>
    <string name="sendsaleinfo_requre">特殊要求</string>
    <string name="sendsaleinfo_requre1">有特殊费用</string>
    <string name="sendsaleinfo_requre2">无特殊费用</string>
    <string name="sendsaleinfo_invoice">是否含发票</string>
    <string name="sendsaleinfo_invoice1">提供发票</string>
    <string name="sendsaleinfo_invoice2">无法提供发票</string>
    <string name="sendsaleinfo_update">上传照片</string>
    <string name="sendsaleinfo_pic1">CSC PLATE图片</string>
    <string name="sendsaleinfo_pic2">正面图片</string>
    <string name="sendsaleinfo_pic3">后面图片</string>
    <string name="sendsaleinfo_pic4">侧面(左)图片</string>
    <string name="sendsaleinfo_pic5">侧面(右)图片</string>
    <string name="sendsaleinfo_pic6">箱子内部图片</string>
    <string name="sendsaleinfo_total">合计:</string>
    <string name="sendsaleinfo_send">发布</string>
    <string name="discuss_title">讨论区</string>
    <string name="discuss_all_shrink">全部</string>
    <string name="discuss_all_expand">收起</string>
    <string name="send_title">发帖子</string>
    <string name="send_hint">请输入内容</string>
    <string name="send_pic_tip">发布照片</string>
    <string name="send_pic_send">发布</string>
    <string name="personal_title">个人中心</string>
    <string name="personal_name">账户名:</string>
    <string name="personal_id">开户支行:</string>
    <string name="personal_bank">银行账号:</string>
    <string name="personal_ok">成功交易:</string>
    <string name="personal_cancel">取消交易:</string>
    <string name="personal_unit">单</string>
    <string name="personal_realname">姓名</string>
    <string name="personal_usrid">会员卡号</string>
    <string name="personal_myphone">电话</string>
    <string name="personal_username">用户名</string>
    <string name="personal_posting">我的帖子</string>
    <string name="personal_order">我的买箱订单</string>
    <string name="personal_salerorder">我的卖箱订单</string>
    <string name="personal_buyinfo">我的买箱信息</string>
    <string name="personal_saleinfo">我的卖箱信息</string>
    <string name="personal_message">系统消息</string>
    <string name="personal_callback">意见反馈</string>
    <string name="change_personal_info_title">修改个人信息</string>
    <string name="change_personal_info_face">头像</string>
    <string name="change_personal_info_name">用户名</string>
    <string name="change_personal_info_name_hint">请输入姓名</string>
    <string name="change_personal_info_address">联系地址</string>
    <string name="change_personal_info_address_hint">请输入联系地址</string>
    <string name="change_personal_info_tip">是否接收卖家发布的信息推送</string>
    <string name="change_personal_info_id">银行账号</string>
    <string name="change_personal_info_id_hint">请输入账号</string>
    <string name="change_personal_info_bank">开户银行</string>
    <string name="change_personal_info_bank_hint">请选择开户银行</string>
    <string name="change_personal_info_bank_hint_two">请选择开户银行</string>
    <string name="change_personal_info_bank_name">银行账户名</string>
    <string name="change_personal_info_bank_name_hint">请输入账户名</string>
    <string name="change_personal_info_bank_tip">注:请选择您的主营城市,选择完城市,将收到对应城市的求购信息.</string>
    <string name="change_personal_info_bank_sure">确认</string>
    <string name="change_company_info_title">修改公司信息</string>
    <string name="change_company_info_face">头像</string>
    <string name="change_company_info_name">公司名称</string>
    <string name="change_company_info_name_hint">请输入公司名称</string>
    <string name="change_company_info_phone">公司电话</string>
    <string name="change_company_info_phone_hint">请输入公司固定电话</string>
    <string name="change_company_info_address">公司地址</string>
    <string name="change_company_info_address_hint">请输入公司地址</string>
    <string name="change_company_info_charge">公司负责人</string>
    <string name="change_company_info_charge_hint">请输入公司负责人姓名</string>
    <string name="change_company_info_tip">是否接收卖家发布的信息推送</string>
    <string name="myposting_title">我的帖子</string>
    <string name="myorder_title">我的买箱订单</string>
    <string name="myorder_tab1">全部</string>
    <string name="myorder_tab2">待付款</string>
    <string name="myorder_tab3">已付款</string>
    <string name="myorder_tab4">待提货</string>
    <string name="myorder_tab5">已完成</string>
    <string name="myorder_orderid">订单编号:</string>
    <string name="myorder_total">共计数量:</string>
    <string name="myorder_unit">件</string>
    <string name="myorder_cunt">合计:</string>
    <string name="order_title">订单详情</string>
    <string name="order_time1">下单时间:</string>
    <string name="order_time2">支付时间:</string>
    <string name="order_time3">收货时间:</string>
    <string name="order_pay">支付方式:</string>
    <string name="order_invoice">发票信息</string>
    <string name="order_person">个人</string>
    <string name="order_company">单位</string>
    <string name="order_invoice_top">发票抬头:</string>
    <string name="order_invoice_content">发票明细:</string>
    <string name="order_invoice_content_two">纳税人识别号:</string>
    <string name="order_invoice_phone">收票人手机:</string>
    <string name="order_tip1">注:提货单内容填写有误的话,请及时联系后台客服人员,她们将为您解决所有问题.</string>
    <string name="order_tip2">*提货单如填写有误,请关注微信公众号：搜箱findcontainer及时联系后台客服人员</string>
    <string name="salerorder_title">我的卖箱订单</string>
    <string name="salerorder_tab1">全部</string>
    <string name="pay_title">选择支付方式</string>
    <string name="pay_forpay">待支付:</string>
    <string name="pay_weixin">微信</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_yinlian">银联支付</string>
    <string name="pay_tip">支付金额如超出支付上限，请联系客服</string>
    <string name="pay_sure">确认支付</string>
</resources>