<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include
                android:id="@+id/topbar"
                layout="@layout/topbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                <com.bm.container.view.MultipleRadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/block_height"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="8dp"
                            android:paddingLeft="@dimen/margin_littile"
                            android:paddingRight="@dimen/margin_littile"
                            android:paddingTop="8dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pay_forpay"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_3"/>

                        <TextView
                                android:id="@+id/tvPayPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/margin_littile"
                                android:text="--"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/text_3"/>


                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:background="@color/background"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/block_height"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="8dp"
                            android:paddingLeft="@dimen/margin_littile"
                            android:paddingRight="@dimen/margin_littile"
                            android:paddingTop="8dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pay_title"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_3"/>


                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/margin_littile"
                            android:layout_marginRight="@dimen/margin_littile"
                            android:background="@color/background"/>

                    <com.bm.container.view.MultipleRadioGroup
                            android:id="@+id/pay_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <LinearLayout
                                android:id="@+id/change_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingBottom="8dp"
                                android:paddingLeft="@dimen/margin_littile"
                                android:paddingRight="@dimen/margin_littile"
                                android:paddingTop="8dp">

                            <RelativeLayout
                                    android:layout_width="33dp"
                                    android:layout_height="33dp">

                                <ImageView
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_centerInParent="true"
                                        android:src="@drawable/weixin"/>

                            </RelativeLayout>

                            <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_littile"
                                    android:layout_weight="1"
                                    android:text="@string/pay_weixin"
                                    android:textColor="@color/grey_deep"
                                    android:textSize="@dimen/text_3"/>

                            <RadioButton
                                    android:id="@+id/weixin"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_margin="5dp"
                                    android:button="@drawable/checkbox_circle"
                                    android:checked="true"/>


                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginLeft="@dimen/margin_littile"
                                android:layout_marginRight="@dimen/margin_littile"
                                android:background="@color/background"/>

                        <LinearLayout
                                android:id="@+id/introduction"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingBottom="8dp"
                                android:paddingLeft="@dimen/margin_littile"
                                android:paddingRight="@dimen/margin_littile"
                                android:paddingTop="8dp">

                            <RelativeLayout
                                    android:layout_width="33dp"
                                    android:layout_height="33dp">

                                <ImageView
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_centerInParent="true"
                                        android:src="@drawable/alipay"/>

                            </RelativeLayout>

                            <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/margin_littile"
                                    android:layout_weight="1"
                                    android:text="@string/pay_alipay"
                                    android:textColor="@color/grey_deep"
                                    android:textSize="@dimen/text_3"/>

                            <RadioButton
                                    android:id="@+id/alipay"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_margin="5dp"
                                    android:button="@drawable/checkbox_circle"
                                    android:checked="false"/>

                        </LinearLayout>

                    </com.bm.container.view.MultipleRadioGroup>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/margin_littile"
                            android:layout_marginRight="@dimen/margin_littile"
                            android:background="@color/background"
                            android:visibility="gone"/>

                    <LinearLayout
                            android:id="@+id/hotline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingBottom="8dp"
                            android:paddingLeft="@dimen/margin_littile"
                            android:paddingRight="@dimen/margin_littile"
                            android:paddingTop="8dp"
                            android:visibility="gone">

                        <RelativeLayout
                                android:layout_width="33dp"
                                android:layout_height="33dp">

                            <ImageView
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/yinlian"/>

                        </RelativeLayout>

                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/margin_littile"
                                android:layout_weight="1"
                                android:text="@string/pay_yinlian"
                                android:textColor="@color/grey_deep"
                                android:textSize="@dimen/text_3"/>

                        <RadioButton
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_margin="5dp"
                                android:button="@drawable/checkbox_circle"
                                android:checked="false"/>

                    </LinearLayout>

                </com.bm.container.view.MultipleRadioGroup>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="@dimen/margin_littile"
                        android:layout_marginRight="@dimen/margin_littile"
                        android:layout_marginTop="30dp"
                        android:text="@string/pay_tip"
                        android:textColor="@color/grey_deep"
                        android:textSize="@dimen/text_1"/>

                <Button
                        android:id="@+id/pay"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/block_height"
                        android:layout_marginLeft="@dimen/margin_littile"
                        android:layout_marginRight="@dimen/margin_littile"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/round_corner_blue_gb"
                        android:text="@string/pay_sure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_5"/>


            </LinearLayout>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</layout>
